# motion_lights_automation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  REFACTOR_GUIDE.md  START_HERE.md  hacs.json  pyproject.toml  run_simulation.py  setup.cfg
.github/: copilot-instructions.md
.github/skills/: ha-component.md  simulation.md  testing.md
.github/workflows/: hassfest.yaml  pythonpackage.yaml
custom_components/motion-lights-adv/: __init__.py  config_flow.py  const.py  light_controller.py  manifest.json  manual_detection.py  motion_coordinator.py  run_tests.py  sensor.py  services.yaml  state_machine.py  strings.json  test_functionality.py  test_integration_load.py  test_logic.py  test_modules.py  test_motion_coordinator.py  test_simple_config.py  timer_manager.py
custom_components/motion_lights_automation/: ARCHITECTURE.md  README.md  __init__.py  base_state_machine.py  base_timer_manager.py  config_flow.py  const.py  light_controller.py  manifest.json  manual_detection.py  motion_coordinator.py  sensor.py  state_machine.py  strings.json  timer_manager.py  triggers.py
custom_components/motion_lights_automation/core/: __init__.py  state_machine.py  timer_manager.py
custom_components/motion_lights_automation/translations/: en.json
custom_components/motion_lights_automation_rig/: README.md  __init__.py  binary_sensor.py  config_flow.py  const.py  helper_automations.yaml  icons.json  light.py  manifest.json  number.py  sensor.py  strings.json  switch.py
simulation/: README.md  __init__.py  ha_simulation.py  server.py  sim_coordinator.py
simulation/static/: index.html
simulation/static/js/: app-header.js  app.js  config-panel.js  event-log.js  flow-component.js  state-flow.js  state-machine.js  state-store.js  timer-display.js
tests/: conftest.py
tests/motion_lights_automation/: __init__.py  conftest.py  test_ambient_light.py  test_ambient_light_changes.py  test_ambient_light_prevents_activation.py  test_ambient_light_sensor.py  test_basics.py  test_config_flow.py  test_config_flow_simple.py  test_coordinator_simple.py  test_critical_fixes.py  test_diagnostic_sensor.py  test_init.py  test_integration.py  test_light_controller.py  test_manual_detection.py  test_motion_activation_disabled.py  test_motion_delay.py  test_scenarios.py  test_sensor.py  test_sensor_simple.py  test_state_machine.py  test_timer_manager.py  test_triggers.py  test_yaml_config.py
tests/motion_lights_automation/features/: __init__.py  test_ambient_light.py  test_diagnostic_sensor.py  test_motion_activation_disabled.py  test_motion_delay.py  test_reconfigure_ambient_sensor.py
tests/motion_lights_automation/pipeline/: __init__.py  conftest.py  test_ambient_light_pipeline.py  test_cross_feature.py  test_edge_cases.py  test_house_active_pipeline.py  test_integration_lifecycle.py  test_knx_resilience.py  test_manual_intervention.py  test_motion_lifecycle.py  test_multi_light.py  test_override_pipeline.py  test_real_world_scenarios.py  test_state_transition_matrix.py  test_timer_pipeline.py
(+11 files in other folders)
